--- a/AndBeyondAdapter/build.gradle
+++ b/AndBeyondAdapter/build.gradle
@@ -40,8 +40,8 @@ ext {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation rootProject.ext.playServicesAds
-    implementation rootProject.ext.appcompat
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
