--- a/AndBeyondAdapter/build.gradle
+++ b/AndBeyondAdapter/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 android {
     namespace 'com.rtb.andbeyondmedia.adapter'
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
+        targetSdk 32
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
         buildConfigField("String", "ADAPTER_VERSION", "\"1.0.0\"")
@@ -34,21 +34,19 @@ android {
 ext {
     retrofit = "2.9.0"
     okhttp = '5.0.0-alpha.9'
-    koin_android_version = "3.3.0"
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.gms:play-services-ads:21.5.0'
+    implementation rootProject.ext.playServicesAds
+    implementation rootProject.ext.appcompat
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
-    implementation "io.insert-koin:koin-android:$koin_android_version"
     implementation 'org.prebid:prebid-mobile-sdk:2.0.4'
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    //noinspection GradleDependency
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
 
 publishing {
